[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/textures/damage-effect.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/Menus/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/starBig.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/Enemy/Spawner.gd" type="Script" id=4]
[ext_resource path="res://src/scenes/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Camera/ShakeCam.gd" type="Script" id=6]
[ext_resource path="res://src/scenes/Gameplay/Gameplay.gd" type="Script" id=7]
[ext_resource path="res://src/scenes/Home/Home.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/textures/upgrade-effect.png" type="Texture" id=9]
[ext_resource path="res://src/scenes/Panels/ContinuePanel.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "damage"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("DamageEffect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "upgrade"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("UpgradeEffect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Gameplay" type="Node"]
script = ExtResource( 7 )
saveGamePath = "user://userstate.save"

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -99.0
margin_right = 100.0
margin_bottom = 101.0
color = Color( 0.0941176, 0.141176, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsParticle" type="CPUParticles2D" parent="Background"]
position = Vector2( 640, 99 )
scale = Vector2( 3.00761, 4.01182 )
emitting = false
amount = 200
lifetime = 30.0
speed_scale = 2.0
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 180, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.6
scale_amount = 0.1
scale_amount_random = 0.1

[node name="HUDLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="HUD" parent="HUDLayer" instance=ExtResource( 5 )]
visible = false

[node name="PauseLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Pause" parent="PauseLayer" instance=ExtResource( 2 )]
visible = false
mouse_filter = 0

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 540, 0 )
script = ExtResource( 4 )

[node name="SpawnTimer" type="Timer" parent="Spawner"]
one_shot = true

[node name="StartingPos" type="Position2D" parent="."]
position = Vector2( 540, 1100 )

[node name="Cam" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 6 )

[node name="HomeLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Home" parent="HomeLayer" instance=ExtResource( 8 )]

[node name="EffectLayer" type="CanvasLayer" parent="."]

[node name="DamageEffect" type="TextureRect" parent="EffectLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeEffect" type="TextureRect" parent="EffectLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectLayer"]
anims/damage = SubResource( 1 )
anims/upgrade = SubResource( 2 )

[node name="PanelLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="ContinuePanel" parent="PanelLayer" instance=ExtResource( 10 )]
visible = false

[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_SpawnTimer_timeout"]
[connection signal="start_pressed" from="HomeLayer/Home" to="." method="_on_Home_start_pressed"]
